# oracolo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_local.sh
app/config/: app.py  base.py  db.py  logging.py  source.py
scripts/: apply_migrations_local.sh  generate_migration.sh  test_local.sh
tests/fixtures/: __init__.py  base.py  db.py
